2003-09-04  Werner Koch  <wk@gnupg.org>

	* Makefile.am (EXTRA_libcipher_la_SOURCES): Add serpent.c

2003-09-02  Moritz Schulte  <mo@g10code.com>

	* primegen.c (gcry_prime_check, gcry_prime_generate): New
	functions.
	(prime_generate_internal): New function, based on
	_gcry_generate_elg_prime.
	(_gcry_generate_elg_prime): Rewritten as a wrapper for
	prime_generate_internal.

2003-08-28  Werner Koch  <wk@gnupg.org>

	* pubkey.c (gcry_pk_encrypt): Don't include the flags list in the
	return value.  This does not make sense and breaks any programs
	parsing the output strictly (e.g. current gpgsm).
	(gcry_pk_encrypt): If aliases for the algorithm name exists, take
	the first one instead of the regular name to adhere to SPKI
	conventions.
	(gcry_pk_genkey): Ditto.
	(gcry_pk_sign): Ditto. Removed unused KEY_ALGO_NAME.

2003-08-19  Moritz Schulte  <mo@g10code.com>

	* cipher.c: Add support for Serpent
	* serpent.c: New file.

2003-08-10  Moritz Schulte  <moritz@g10code.com>

	* rsa.c (_gcry_rsa_blind, _gcry_rsa_unblind): Declare static.

2003-08-09  Timo Schulz  <twoaday@freakmail.de>

	* random.c (getfnc_gather_random): Don't check NAME_OF_DEV_RANDOM
	two times, but also the NAME_OF_DEV_URANDOM device.
	
2003-08-08  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (sexp_to_enc): Fixed extraction of S-Expression: do not
	fail if no `flags' sub S-Expression is found.

2003-07-27  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_lookup_func_oid): Allow for empty OID lists.

2003-07-23  Moritz Schulte  <moritz@g10code.com>

	* ac.c (gcry_ac_data_construct): New argument: include_flags, only
	include `flags' S-expression, if include_flags is true.  Adjust
	callers.  Thanks for triggering a bug caused by `flags'
	sub-S-expression where they are not expected to Ralf Schneider.

2003-07-21  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (gcry_pk_lookup_func_name): Use new member name
	`aliases' instead of `sexp_names'.

	* ac.c (gcry_ac_key_data_get): New function.
