@@ -1,3 +1,7 @@
+2003-09-04  Werner Koch  <wk@gnupg.org>
+
+	* pubkey.c (check_keys_crypt): Fix for compatibility mode.
+
 2003-08-27  Moritz Schulte  <mo@g10code.com>
 
 	* basic.c (check_ciphers): Added: Serpent.
